lang/examples/good/14.1_tablice.gt
fn main() -> int {
    const n = 1000;
    var primes = <[int]>malloc(n), primes_cnt = 0;
    var sieve = <[bool]>malloc(n);
    var i : int, j : int; 

    for (i = 2; i < n; ++i) {
        if (sieve[i])
            continue;
        primes[primes_cnt] = i;
        primes_cnt = primes_cnt + 1;
        for (j = i * i; j < n; j += i)
            sieve[j] = true;
    }

    for (i = 0; i < primes_cnt; ++i)
        print(primes[i], ' ');

    return 0;
}
